syntax = "proto3";

import "scalapb/scalapb.proto";

package com.jc.logging.proto;

option (scalapb.options) = {
  package_name: "com.jc.logging.proto"
  flat_package: true
};

enum LogLevel {
    NONE = 0; // log level not defined
    TRACE = 1;
    DEBUG = 2;
    INFO = 3;
    WARN = 4;
    ERROR = 5;
    FATAL = 6;
    OFF = 7;
}

message LoggerConfiguration {
    // logger name
    string name = 1;
    LogLevel effectiveLevel = 2;
    LogLevel configuredLevel = 3;
}

message SetLoggerConfigurationReq {
    // logger name
    string name = 1;
    LogLevel level = 2;
}

message GetLoggerConfigurationReq {
    // logger name
    string name = 1;
}

message LoggerConfigurationRes {
    LoggerConfiguration configuration = 1;
    // supported log levels
    repeated LogLevel levels = 2;
}

message GetLoggerConfigurationsReq {
}

message LoggerConfigurationsRes {
    repeated LoggerConfiguration configurations = 1;
    // supported log levels
    repeated LogLevel levels = 2;
}

service LoggingSystemApiService {

    // set log level for logger
    rpc SetLoggerConfiguration (SetLoggerConfigurationReq) returns (LoggerConfigurationRes);

    // get configuration of logger
    rpc GetLoggerConfiguration (GetLoggerConfigurationReq) returns (LoggerConfigurationRes);

    // get configurations of all loggers
    rpc GetLoggerConfigurations (GetLoggerConfigurationsReq) returns (LoggerConfigurationsRes);

}
